--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -58,6 +58,14 @@
     font-size: 23px
     line-height: 132.83%
     max-width: 27.14rem
+  .hero
+    &__text
+      font-size: 18px
+    &__button
+      font-size: 13px
+  .contacts
+    &__phone
+      text-decoration: none
   
 @media screen and ( max-height: 530px )
   .hero
