--- a/src/sass/templates/_hero.sass
+++ b/src/sass/templates/_hero.sass
@@ -46,6 +46,7 @@
     max-width: 5.85rem
     height: 100%
     font-family: "Futura DemiC", sans-serif
+    font-weight: 600
 
   &__scroll-down
     position: absolute
